# blue-horizon-ai-concierge

./: Dockerfile  Procfile  README.md  push_to_hf_spaces.sh  pyproject.toml  pytest.ini  render.yaml  requirements.txt  test_amenities.py  test_redis.py
blue_horizon/: __init__.py
blue_horizon/agents/: __init__.py  base_agent.py  booking_agent.py  config.py  customer_service_agent.py  definitions.py  group_chat_manager.py  test_agents.py  user_proxy.py  weather_agent.py
examples/: currency_conversion_example.py  demo_nl_query_service.py  demo_nl_query_service_usage.py  query_vector_store.py  test_database.py  usage_example.py
scripts/: add_indexes.py  check_neon_db.py  check_room_data.py  check_schema.py  check_vector_tables.py  compare_batches.py  create_tables.py  extend_availability.py  fix_whitespace.py  generate_embeddings.py  init_neon_db.py  list_collections.py  load_test_data.py  migrate_postgres_to_neon.py  migrate_tables.py  migrate_to_neon.py  pgvector_viewer.py  update_neon_availability.py  vacuum_store.py  view_vector_store.py
tests/: test_chroma_store.py  test_vector_search.py
